fix(deps): nommer le vrai coupable de l'échéance Unsafe, et rendre analyze lisible (#3369)
fix(deps) : nommer le vrai coupable de l'échéance Unsafe, et rendre analyze lisible

⚠️ La doc dev accusait Guava. Mesuré sur JDK 25.0.3 en lançant AppTest, le warning vient de
Guice 7.0.0, dans HiddenClassDefiner (génération de proxys AOP) :

  sun.misc.Unsafe::staticFieldBase has been called by
  com.google.inject.internal.aop.HiddenClassDefiner (guice-7.0.0.jar)

Conséquence de l'erreur : la montée de Guava attendue a bien eu lieu (33.4.8-jre, #2740) sans
rien changer, puisqu'elle ne pouvait pas.

Et ce n'est pas « rien à faire pour l'instant » mais une échéance : la JEP 498 retirera
l'accès, et --sun-misc-unsafe-memory-access=allow ne fait que la repousser. La page dit
désormais le vrai coupable, ce qui la lèverait, et comment le vérifier en une commande.

Pour mémoire, une fausse piste : ma première sonde construisait un injecteur Guice minimal et
ne déclenchait aucun warning. HiddenClassDefiner ne sert qu'à la génération de proxys, qu'un
injecteur vide n'exerce pas. Seul le lancement réel le montre.

Second volet : la sortie de dependency:analyze était noyée dans des faux positifs structurels,
et un rapport dont le bruit domine n'est jamais lu. Quatre exclusions nommant chacune sa raison
(classifieur de plateforme JavaFX vu deux fois, BOM et agrégat JUnit, liaison slf4j résolue à
l'exécution).

Le seul vrai signal est corrigé et non masqué : ikonli-core était utilisé sans être déclaré,
et le code l'importe bien directement (org.kordamp.ikonli.Ikon).

⚠️ De quinze entrées bruitées on passe à cinq, qui étaient déjà là. Je les laisse VISIBLES :
les silencer dans la foulée reproduirait le défaut que cette PR corrige.

Closes #2747.